poolsapp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poolsapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pools-app-frontend-service
                port:
                  number: 4200
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pools-app-backend-service
                port:
                  number: 1234
